[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/hit_spot/hit_spot.gd" type="Script" id=1]
[ext_resource path="res://scenes/hit_spot/hit_spot_position.gd" type="Script" id=2]
[ext_resource path="res://scenes/hit_spot/note_spawn_position.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=2]
radius = 28.0

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 32 )

[sub_resource type="CircleShape2D" id=3]
radius = 24.0

[node name="HitSpot" type="Node2D"]
script = ExtResource( 1 )
input = "hitspot_1"
note_spawn_interval = 0.5

[node name="Pivot" type="Position2D" parent="."]

[node name="HitSpotPosition" type="Position2D" parent="Pivot"]
position = Vector2( 128, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="GoodArea" type="Area2D" parent="Pivot/HitSpotPosition"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/HitSpotPosition/GoodArea"]
shape = SubResource( 2 )

[node name="PerfectArea" type="Area2D" parent="Pivot/HitSpotPosition/GoodArea"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/HitSpotPosition/GoodArea/PerfectArea"]
shape = SubResource( 1 )

[node name="MissDetector" type="Area2D" parent="Pivot/HitSpotPosition"]
position = Vector2( -64, 0 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/HitSpotPosition/MissDetector"]
shape = SubResource( 4 )

[node name="NoteSpawnPosition" type="Position2D" parent="."]
position = Vector2( 512, 0 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="NoteSpawnPosition"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoteSpawnPosition/Area2D"]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Tween" type="Tween" parent="."]

[node name="NoteSpawnCooldown" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Pivot/HitSpotPosition/GoodArea" to="." method="_on_GoodArea_area_entered"]
[connection signal="area_exited" from="Pivot/HitSpotPosition/GoodArea" to="." method="_on_GoodArea_area_exited"]
[connection signal="area_entered" from="Pivot/HitSpotPosition/GoodArea/PerfectArea" to="." method="_on_PerfectArea_area_entered"]
[connection signal="area_exited" from="Pivot/HitSpotPosition/GoodArea/PerfectArea" to="." method="_on_PerfectArea_area_exited"]
[connection signal="area_entered" from="Pivot/HitSpotPosition/MissDetector" to="." method="_on_MissDetector_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="NoteSpawnCooldown" to="." method="_on_NoteSpawnCooldown_timeout"]
